# snip

./: .gitignore  Cargo.toml  FORMAT.md  README.md
.github/workflows/: ci.yml  deep-test.yml  release-build.yml
skills/: README.md
skills/snip/: SKILL.md
skills/snip/references/: commands.md  data-model.md
src/: cli.rs  commands.rs  config.rs  domain.rs  error.rs  filesystem.rs  lib.rs  main.rs  render.rs  search.rs  service.rs  sort.rs
src/commands/: config.rs  folder_tag.rs  mod.rs  output.rs  query.rs  snippet.rs  system.rs  trash.rs
src/filesystem/: io.rs  library.rs  mod.rs  paths.rs  registry.rs  scan.rs
src/importer/: mod.rs  snippetslab.rs
src/importer/snippetslab/: decoder.rs  mapping.rs  mod.rs  storage.rs  tests.rs  types.rs
src/service/: doctor.rs  folder_tag.rs  fragment.rs  helpers.rs  mod.rs  snippet.rs  trash.rs  types.rs
src/tui/: app.rs  bottom_bar.rs  clipboard.rs  editor.rs  event.rs  help.rs  highlight.rs  icons.rs  layout.rs  mod.rs  modal.rs  preview.rs  selection.rs  sidebar.rs  snippet_list.rs  state.rs  theme.rs  top_bar.rs  trash.rs  ui.rs  widgets.rs
src/tui/app/: core.rs  effects.rs  input.rs  mod.rs  modals.rs  trash_view.rs  types.rs
tests/: cli.rs  cli_management.rs  core.rs  git.rs  tui.rs
