[package]
name = "snip"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "A filesystem-native snippet library and agent-friendly CLI"
license = "MIT"

[lib]
name = "snip"
path = "src/lib.rs"

[[bin]]
name = "snip"
path = "src/main.rs"

[features]
default = ["tui"]
tui = [
    "dep:arboard",
    "dep:notify",
    "dep:notify-debouncer-mini",
    "dep:ratatui",
]

[dependencies]
blake3 = "1.8"
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
fs2 = "0.4"
plist = "1.10"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "2.0"
syntect = "5.3"
tempfile = "3.23"
thiserror = "2.0"
time = { version = "0.3.54", features = ["formatting", "parsing"] }
toml = "1.0"
uuid = { version = "1.24", features = ["v4", "serde"] }
arboard = { version = "3.6.1", optional = true, default-features = false }
notify = { version = "8.2", optional = true }
notify-debouncer-mini = { version = "0.7", optional = true }
ratatui = { version = "0.30.2", optional = true }
regex = { version = "1.13.1", default-features = false, features = ["std", "perf", "unicode"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"

[profile.release]
lto = "thin"
strip = true
